--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -50,39 +50,93 @@
 @include motion-ui-animations;
 
 // Default medium-gray color
-
 $medium-gray: #cacaca;
-
 // Default global padding
-
 $global-padding: 1rem;
-
 // Global value used for all elements that have a border radius.
-
 $global-radius: 3px;
-
-
-
 // Setting the form border color
-
 $form-border-color: $medium-gray;
-
 // Setting the form padding
-
 $form-padding: $global-padding;
-
 // Setting the form border radius
-
 $form-radius: $global-radius;
-
+$header-color-notice: #ff9800;
 
 
 .log-in-form {
-
 //  border: 1px solid $form-border-color;
-
 //  padding: $form-padding;
-
 //  border-radius: $form-radius;
+}
 
+.header-notice {
+    color: $header-color-notice;
+}
+/* Variables */
+
+// Adjust width accordingly (use even #'s)
+$logo-width: 118px;
+// Reduce px value to increase space between logo and menu text
+$logo-padding: $logo-width - 32px; 
+// Leave alone
+$logo-margin: - ($logo-width / 2);
+
+/* Small Navigation */
+
+.logo-small {
+  float: right;
+}
+.title-bar {
+  padding: 0 .5rem;
+}
+
+.menu-icon,
+.title-bar-title {
+
+  position: relative;
+
+  top: 10px;
+}
+/* Medium-Up Navigation */
+@media only screen and (min-width: 40rem) { 
+  .logo-wrapper {
+    position: relative;
+    .logo {
+      width: $logo-width;
+      height:  92px;
+      position: absolute;
+      left: 50%;
+      right: 50%;
+      top: -6px;
+      margin-left: $logo-margin;
+    }
+  }
+  // Right part
+  .top-bar-right {
+    width: 50%;
+    padding-left: $logo-padding;
+    ul {
+      float: left;
+    }
+  }
+  
+  // Left part
+  .top-bar-left {
+    width:  50%;
+    padding-right: $logo-padding;
+    
+    ul {
+      float: right;
+    }
+  }
+}
+.cancel-button {
+    @include button(
+        $expand:true,
+        $background: #ff9800,
+        $background-hover:auto,
+        $color:auto,
+        $style:solid
+    );
 }
