--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -2,18 +2,31 @@
 
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gradr</title>
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
-  </head>
-  <body>
+</head>
 
-    {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
-    {{> body}}
+<body>
+
+    {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}} {{> body}}
 
     <script src="{{root}}assets/js/app.js"></script>
-  </body>
+    {{#ifpage 'uploadHW'}}
+        <script src="{{root}}assets/js/upload-file/jquery.knob.js"></script>
+
+		<!-- jQuery File Upload Dependencies -->
+		<script src="{{root}}assets/js/upload-file/jquery.ui.widget.js"></script>
+		<script src="{{root}}assets/js/upload-file/jquery.iframe-transport.js"></script>
+		<script src="{{root}}assets/js/upload-file/jquery.fileupload.js"></script>
+
+		<!-- Our main JS file -->
+		<script src="{{root}}assets/js/upload-file/script.js"></script>
+    {{/ifpage}}
+</body>
+
 </html>
