css cahnges to main form

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -155,7 +155,9 @@ $logo-margin: - ($logo-width / 2);
     width:300px;
     border-radius:3px;
 
-    margin-top:25%;
+    margin-top:40%;
+    margin-right:auto;
+    margin-left:auto;
 }
 
 #drop{
