--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -91,6 +91,10 @@ $logo-margin: - ($logo-width / 2);
   background-color: $primary-color-light;
   color:$primary-text-color;
 }
+#nav-menu ul a:hover{
+    background-color: $primary-color;
+    color:white;
+}
 
 .logo-small {
   float: right;
